tests/expectations/compiler/address/lt_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372021]: Comparison `<` is not supported for the address type.
    --> compiler-test:7:16
     |
   7 |         return x < sender;
     |                ^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
